--- a/questions.html
+++ b/questions.html
@@ -28,6 +28,9 @@
     </head>
     <body>
         <div id="app">
+            <a id="close" href="">
+                <i class="fa-solid fa-circle-xmark"></i>
+            </a>
             <section id="question_top" v-if="approveStatus !== 1">
                 <h1>{{testName}}</h1>
                 <h2>選擇建立考題之類型</h2>
